--- a/css/tranfer.css
+++ b/css/tranfer.css
@@ -11,6 +11,18 @@ body {
   width: 100%;
   height: 100vh;
 }
+.bg-gradient-primary-to-secondary {
+  background: linear-gradient(45deg, #2937f0, #9f1ae2) !important;
+    background-color: rgba(0, 0, 0, 0);
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-image: linear-gradient(45deg, rgb(41, 55, 240), rgb(159, 26, 226));
+    background-size: auto;
+    background-origin: padding-box;
+    background-clip: border-box;
+}
 
 .col-left {
   background-color: #5d17eb;
@@ -73,8 +85,8 @@ body {
   position: relative;
   background-color: black;
   border: 5px dashed white;
-  width: 50vw;
-  height: 50vh;
+  width: 21vw;
+  height: 35vh;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -155,4 +167,97 @@ msglist {
   overflow: scroll;
   padding: 5px;
   margin-bottom: 10px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 16% 25%; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: max-content; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  margin-top: -14px;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+} 
+#modalSpan {
+  margin-top: -24px;
+}
+.btn {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 13px;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: transparent;
+  border: 1px solid transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+  padding: 0.375rem 0.75rem;
+  margin-right: 6px;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.btn:hover {
+  color: #212529;
+}
+.btn-outline-primary {
+  color: #2937f0;
+  border-color: #2937f0;
+}
+.btn-outline-primary:hover {
+  color: #fff;
+  background-color: #2937f0;
+  border-color: #2937f0;
+}
+
+.alert-success {
+  color: white;
+  background-color: #0f5132;
+  border-color: #0f5132;
+}
+
+.alert {
+  position: relative;
+  padding: 1rem 1rem;
+    padding-right: 1rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+  border-radius: 0.25rem;
 }
